# j-lens-rl

./: .gitignore  CONFIRMATORY_PROTOCOL.md  CURRENT_INSTRUCTIONS.md  EMOTIONAL_TOURNAMENT_V1_HANDOFF.md  EXPERIMENT_HANDOFF.md  PLAN.md  README.md  REFERENCES.md  RESEARCH_LOG.md  V7_PROFANITY_HANDOFF.md  V8_LOCAL_HANDOFF.md  audit.md  modal_confirmatory_v10_fast.py  modal_confirmatory_v5.py  modal_confirmatory_v6.py  modal_confirmatory_v7.py  modal_emotional_parallel_v2.py  modal_emotional_tournament_v1.py  modal_experiments.py  modal_explore.py  modal_publish_v16_combined.py  modal_single_word_screen.py  modal_v14_v11style_celebration.py  modal_v15_celebration_h5.py  modal_v15b_celebration_h5.py  modal_v16_v14_manyseed_curve.py  modal_v16r_seed264_replacement.py  modal_v8_wandb_sync.py  modal_v9_wandb_sync.py  modal_word_correlation.py  modal_word_explore.py  pyproject.toml  run_confirmatory.sh  run_confirmatory_v5.sh  run_confirmatory_v6.sh  run_confirmatory_v7.sh  run_confirmatory_v8_local.sh  run_confirmatory_v9_local.sh  run_emotional_tournament_v1.sh  run_single_word_screen.sh  (+4 more)
configs/: clean_confirmation_eval.json  common.json  confirmatory_common.json  confirmatory_gsm8k_seed142.json  confirmatory_gsm8k_seed148.json  confirmatory_jlens_seed142.json  confirmatory_jlens_seed143.json  confirmatory_jlens_seed144.json  confirmatory_jlens_seed145.json  confirmatory_jlens_seed146.json  confirmatory_jlens_seed147.json  confirmatory_jlens_seed148.json  confirmatory_jlens_seed149.json  confirmatory_jlens_seed150.json  confirmatory_jlens_seed151.json  (+192 more)
tests/: test_common.py  (+32 more)
(+1030 files in other folders)
