[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "j-lens-rl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "accelerate==1.12.0",
  "datasets==4.7.0",
  "numpy==2.2.6",
  "peft==0.18.0",
  "torch==2.9.1",
  "transformers==5.5.0",
  "wandb==0.28.0",
  "jlens @ git+https://github.com/anthropics/jacobian-lens.git@581d398613e5602a5af361e1c34d3a92ea82ba8e",
  "matplotlib==3.10.8",
]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]
modal = ["modal==1.5.2"]

[project.scripts]
fit-jlens = "jlens_rl.fit_lens:main"
train-jlens-rl = "jlens_rl.train:main"
eval-jlens-rl = "jlens_rl.eval:main"
compare-jlens-evals = "jlens_rl.paired_eval:main"
plot-jlens-rl = "jlens_rl.plot:main"
analyze-jlens-alignment = "jlens_rl.analyze_alignment:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
